# src/course/app.ts
@@ -1,12 +1,12 @@
 import { errHandler } from "@lxdgc9/pkg/dist/middie";
 import express from "express";
-import { r as schlRouter } from "./route/school";
+import { r as unitRouter } from "./route/unit";
 
 const app = express();
 
 app.use(express.json());
 
-app.use("/api/courses/schls", schlRouter);
+app.use("/api/courses/units", unitRouter);
 
 app.all("*", (_req, res) => {
   res.status(404).json({ msg: "request not found" });
